<resources>
    <string name="app_name">项目</string>

    <string name="press_again_to_exit">再按一次退出</string>
    <string name="open"/>
    <string name="close"/>
    <string name="groom">推荐</string>
    <string name="episode">段子</string>
    <string name="video">视频</string>

    <!-- 我的 -->
    <string name="btn_click_login">点击登录</string>
    <string name="mine_follow">关注</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_recharge">充值</string>
    <string name="mine_starlight">我的星光</string>
    <string name="mine_contribution">星光贡献榜</string>
    <string name="mine_watch">观看历史</string>
    <string name="mine_level">我的等级</string>
    <string name="mine_task">任务中心</string>
    <string name="mine_game">游戏中心</string>
    <string name="mine_setting">设置</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="lable_username_number">用户名/手机号</string>
    <string name="lable_password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="third_party_login">第三方登录</string>
    <!--  注册  -->
    <string name="sex">请输入性别</string>
    <string name="et_phone">请输入手机号</string>
    <string name="et_pass">请输入密码</string>
    <string name="et_name">请输入用户名</string>
    <string name="et_head">请输入userHead</string>
    <!--  发表 -->
    <string name="cancel">取消</string>
    <string name="publishArticle">发表文章</string>
    <string name="publish">发表</string>
    <string name="at">"@Ta"</string>


</resources>
