<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:checkedButton="@+id/rbRecom">
        <RadioButton
            android:id="@+id/rbRecom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/groom"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_recom_selector"/>
        <RadioButton
            android:id="@+id/rbSatin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/episode"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_satin_selector"/>
        <RadioButton
           android:id="@+id/rbVideo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawablePadding="4dp"
            android:text="@string/video"
            android:textSize="@dimen/bottom_menu_text_size"
            android:textColor="@color/tab_text_color"
            android:drawableTop="@drawable/btn_tabbar_video_selector"/>

    </RadioGroup>
</LinearLayout>