<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:padding="10dp"
        android:background="@color/cyan"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/up_cancel"
            android:textSize="18sp"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18sp"
            android:text="@string/publishArticle"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/up_publish"
            android:textSize="18sp"
            android:text="@string/publish"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/up_et"
        android:hint="请输入内容，禁止输入色情，暴力等违反国家法律的内容，违者将封号处理!"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/up_iv"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:src="@mipmap/plus"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <View
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/up_tv_at"
            android:textSize="20sp"
            android:text="@string/at"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/up_iv_right"
            android:src="@mipmap/right"
            android:layout_gravity="center"
            android:layout_width="25dp"
            android:layout_height="25dp" />
    </LinearLayout>

</LinearLayout>
